--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -28,9 +28,22 @@
       <link href="https://fonts.googleapis.com/%22%3E" rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Esteban&family=Sarabun:wght@200;400&display=swap" rel="stylesheet"> 
 
-    <title>Odyssey Log-In</title>
+    <title>Odyssey Sign-Up</title>
   </head>
   <body>
+    <a href = "index.html"><img class = "back" src = "../images/back.png" alt = "back icon" width = 16px></a>
+    <h1 class = "sign-up">Create an Account</h1>
+    <form class = "log-in">
+        <input type = "text" class = "input" placeholder = "User Name">
+        <br>
+        <input type = "password" class = "input" placeholder = "Password">
+        <br>
+        <input type = "email" class = "input" placeholder = "Email">
+        <br>
+        <input type = "text" class = "input" placeholder = "Phone Number">
+        <br>
+        <input type = "submit" placeholder = "Sign Up">
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -43,20 +56,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div class = "content">
-      <h1 class = "app-name">Odyssey</h1>
-      <form class = "log-in">
-        <input type = "text" class = "input" placeholder = "User Name">
-        <br>
-        <input type = "password" class = "input" placeholder = "Password">
-        <br>
-        <a href = "">Forgot Password?</a>
-        <br>
-        <input type = "submit" value = "Log-In">
-        <br>
-        <p>Don't have an account? <a href = "sign-up.html">Sign up now!</a></p>
-      </form>
-    </div> 
-    
-  </body>
+    </body>
 </html>
