--- a/public/home.html
+++ b/public/home.html
@@ -29,6 +29,19 @@
       <link href="https://fonts.googleapis.com/css2?family=Esteban&family=Sarabun:wght@200;400&display=swap" rel="stylesheet"> 
 
     <title>Explore Odyssey</title>
+    <title>Add Map</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script type="module" src="./map.js"></script>
+    <style>
+    /* Set the size of the div element that contains the map */
+        #map {
+          height: 100%; /* The height is 400 pixels */
+          width: 100%; /* The width is the width of the web page */
+        }
+        
+    </style>
   </head>
   <body>
     <header>
@@ -38,10 +51,11 @@
         </div>
     </header>
 
-    <div class = "map">
-
-    </div>
-
+    <div id = "map"></div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkay_o0HhhK2I9Hl5q9ZuonOaMFYw0DKs&callback=initMap&v=weekly"
+      defer
+    ></script>
     <footer>
         <nav>
             <ul>
