--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       <link rel="stylesheet" href = "../src/index.css">
       <link href="https://fonts.googleapis.com/%22%3E" rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Esteban&family=Sarabun:wght@200;400&display=swap" rel="stylesheet"> 
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Odyssey Log-In</title>
   </head>
@@ -53,13 +54,20 @@
           <br>
           <a href = "">Forgot Password?</a>
           <br>
-          <input type = "submit" placeholder = "Log In">
+            <a href = "map.html">
+            <button type="button" class="btn btn-primary">Submit</button>
+            </a>
           <br>
-          <p>Don't have an account? <a href = "sign-up.html">Sign up now!</a></p>
+          <p>Don't have an account? <a href = "sign-up.html">Sign up now!</p></a>
+          <br>
         </form>
       </div> 
     </div>
     
-    
+    <script>
+        function submit(){
+            window.location.href="map.html";
+        }
+    </script>
   </body>
 </html>
