--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -31,12 +31,14 @@
     <title>Odyssey Sign-Up</title>
   </head>
   <body>
-    <a href = "index.html"><img class = "back" src = "../images/back.png" alt = "back icon" width = 16px></a>
+    <a href = "index.html"><img class = "back" src = "../images/back.png" alt = "back icon" style="position: relative; width: 50px"></a>
     <h1 class = "sign-up">Create an Account</h1>
     <form class = "log-in">
         <input type = "text" class = "input" placeholder = "User Name">
         <br>
+        <br>
         <input type = "password" class = "input" placeholder = "Password">
+        <br>
         <br>
         <input type = "email" class = "input" placeholder = "Email">
         <br>
