--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     -->
     <div class = "box">
       <div class = "content">
-        <img src = "../images/logo.png">
+        <img src = "../images/logo.png" style="position: relative; right: -360px; top: 100px">
         <form class = "log-in">
           <input type = "text" class = "input" placeholder = "User Name">
           <br>
